--- a/app/src/main/res/layout/cancel_dialog.xml
+++ b/app/src/main/res/layout/cancel_dialog.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="280dp"
-    android:layout_height="251dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="20dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/checkout_border"
     android:elevation="10dp"
     android:orientation="vertical"
@@ -12,25 +11,22 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="1dp"
         android:background="@color/white"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="8"
             android:orientation="horizontal"
-            android:paddingLeft="16dp"
-            android:paddingRight="26dp"
-           >
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp">
 
             <TextView
-                android:id="@+id/tvReorder"
-                android:layout_width="wrap_content"
+                android:id="@+id/tvCancel"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="12dp"
-                android:layout_weight="3"
+                android:layout_margin="5dp"
+                android:layout_weight=".2"
                 android:fontFamily="@font/roboto_bold"
                 android:text="Cancel Order"
                 android:textColor="@color/light_black_1"
@@ -38,16 +34,15 @@
 
             <TextView
                 android:id="@+id/tvClose"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="16dp"
-                android:layout_weight="3"
+                android:layout_margin="5dp"
+                android:layout_weight=".8"
                 android:fontFamily="@font/roboto_bold"
                 android:gravity="right"
                 android:text="Close"
                 android:textColor="#FFFA5400"
-                android:textSize="10sp" />
-
+                android:textSize="12sp" />
         </LinearLayout>
 
         <View
@@ -58,32 +53,29 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="5"
             android:orientation="horizontal"
-            android:paddingLeft="19dp"
-            android:paddingRight="24dp">
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp">
 
             <TextView
                 android:id="@+id/tvDesc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_margin="5dp"
                 android:fontFamily="@font/roboto_medium"
-                android:text="It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content"
+                android:text="@string/cancelMsg"
                 android:textColor="@color/light_black_5"
-                android:textSize="12sp" />
+                android:textSize="14sp" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="7"
             android:orientation="horizontal"
-            android:paddingLeft="14dp"
-            android:paddingRight="14dp"
-            android:paddingBottom="8dp">
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingBottom="15dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -93,7 +85,7 @@
                 <Button
                     android:id="@+id/btnCancel"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
+                    android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:background="@drawable/btn_cancel_reorder"
                     android:fontFamily="@font/roboto_regular"
@@ -111,7 +103,7 @@
                 <Button
                     android:id="@+id/btnConfirm"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
+                    android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:background="@drawable/btn_check_items"
                     android:fontFamily="@font/roboto_bold"
@@ -121,6 +113,5 @@
                     android:textSize="14sp" />
             </LinearLayout>
         </LinearLayout>
-
     </LinearLayout>
 </android.support.v7.widget.CardView>
