--- a/app/src/main/res/layout/order_details_item.xml
+++ b/app/src/main/res/layout/order_details_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardOrderDetails"
     android:layout_width="match_parent"
-    android:layout_height="95dp"
+    android:layout_height="98dp"
     android:layout_marginBottom="8dp"
     android:background="@color/white"
     android:orientation="vertical"
@@ -103,7 +103,8 @@
                             android:fontFamily="@font/roboto_regular"
                             android:text="1000kg"
                             android:textColor="@color/light_black_1"
-                            android:textSize="12sp" />
+                            android:textSize="12sp"
+                            android:paddingBottom="5dp"/>
 
                     </LinearLayout>
 
@@ -127,7 +128,8 @@
                             android:fontFamily="@font/roboto_regular"
                             android:text="$ 80"
                             android:textColor="@color/light_black_2"
-                            android:textSize="7sp" />
+                            android:textSize="7sp"
+                            android:visibility="invisible"/>
 
                         <TextView
                             android:id="@+id/tvpriceNewOrdDetails"
